# PEPPERLFUCHS_radar

./: .gitignore  README.md  canopen_ws.repos
.metadata/: .lock_info  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: pf_radar_adapter.1761133056485.pdom  pf_radar_adapter.language.settings.xml  pf_radar_interfaces_sd.1761133058803.pdom  pf_radar_interfaces_sd.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap  1.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/sncf_radar_rpdo_adapter/: .location  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources  org.eclipse.papyrus.infra.emf.1
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.gmf.runtime.diagram.ui/: _BNVfxK83EfCh8-Kh2KWRzw  _CBTd8K50EfCKarBJGpTXOA  _QorFAK86EfCYOY8NCiiXqg  _sD-1hK84EfCh8-Kh2KWRzw  _x66S1K8bEfCKarBJGpTXOA  _zHyhYK82EfCh8-Kh2KWRzw
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.papyrus.infra.core/sncf_radar_rpdo_adapter/ msg_definitions/: my_msgs.servicedef.sash
.metadata/.plugins/org.eclipse.papyrus.infra.core/sncf_radar_rpdo_adapter/src/: src.compdef.sash
.metadata/.plugins/org.eclipse.papyrus.infra.emf/index/: PapyrusWorkspaceProfiles.1  papyrusCrossRefs.1  papyrusUMLProfiles.1
.metadata/.plugins/org.eclipse.papyrus.infra.ui.emf/: dialog_settings.xml
.metadata/.plugins/org.eclipse.papyrus.uml.diagram.wizards/: dialog_settings.xml
.metadata/.plugins/org.eclipse.papyrus.uml.properties/tables/: PapyrusStereotypeDisplayTreeTable_Interface.table  PropertyTable_Class.table
.metadata/.plugins/org.eclipse.papyrus.views.properties/: preferences.xmi
.metadata/.plugins/org.eclipse.pde.core/: SavedExternalPluginList.txt
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
canopen_interfaces/: .project
canopen_interfaces/models/services/: canopeninterfaces.servicedef.aird  canopeninterfaces.servicedef.notation
pf_radar_adapter/: .cproject  .project  CMakeLists.txt  package.xml
pf_radar_adapter/models/components/: pf_radar_adapter.compdef.aird  pf_radar_adapter.compdef.notation
pf_radar_adapter/src-gen/pf_radar_adapter_cd/: Pkg_pf_radar_adapter_cd.h  pf_radar_adapter.cpp  pf_radar_adapter.h  pf_radar_adapter_main.cpp
pf_radar_adapter/src-gen/pf_radar_adapter_cd/globalenums/: Pkg_globalenums.h
pf_radar_adapter/src-skel/pf_radar_adapter_cd/: pf_radar_adapter_impl.cpp  pf_radar_adapter_impl.h
pf_radar_adapter/src/pf_radar_adapter_cd/: pf_radar_adapter_impl.cpp
pf_radar_interfaces/: .project
pf_radar_interfaces/models/services/: pf_radar_interfaces.servicedef.aird  pf_radar_interfaces.servicedef.notation
pf_radar_interfaces_sd/: .cproject  .project  CMakeLists.txt  package.xml
pf_radar_interfaces_sd/msg/: Radar.msg
src/canopen_config/: CMakeLists.txt  package.xml
src/canopen_config/config/bus_config/: bus.yml  radar_sensor_can_2024_06_06.eds
src/canopen_config/launch/: pfr.launch.py
(+17 files in other folders)
