<?xml version="1.0"?>
<package format="3">
	<name>pf_radar_adapter</name>
	<version>0.0.0</version>
	<description>No description</description>
	<maintainer email="maintainer@somewhere.net">maintainer</maintainer>
	<license>Apache2.0</license>
	<url type="website">https://eclipse.org/papyrus</url>
	<author email="author@somewhere.net">author</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>rclcpp</build_depend>
	<build_depend>rclcpp_lifecycle</build_depend>
	<build_depend>pf_radar_interfaces_sd</build_depend>
	<build_depend>canopen_interfaces</build_depend>

	<exec_depend>rclcpp</exec_depend>
	<exec_depend>rclcpp_lifecycle</exec_depend>
	<exec_depend>pf_radar_interfaces_sd</exec_depend>
	<exec_depend>canopen_interfaces</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
