<?xml version="1.0"?>
<package format="3">
	<name>pf_radar_interfaces_sd</name>
	<version>0.0.0</version>
	<description>pf_radar_interfaces_sd package</description>
	<maintainer email="maintainer@somewhere.net">maintainer</maintainer>
	<license>Apache2.0</license>
	<url type="website">https://eclipse.org/papyrus</url>
	<author email="author@somewhere.net">author</author>

	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<depend>std_msgs</depend>
	<depend>builtin_interfaces</depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
